--- a/Info.plist
+++ b/Info.plist
@@ -2,16 +2,25 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>CFBundleExecutable</key>
+    <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
-    <string>com.tvremote.app</string>
+    <string>com.tvremote.TVRemoteApp</string>
+    <key>CFBundleInfoDictionaryVersion</key>
+    <string>6.0</string>
     <key>CFBundleName</key>
     <string>TVRemote</string>
+    <key>CFBundlePackageType</key>
+    <string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
     <key>CFBundleShortVersionString</key>
     <string>1.0</string>
     <key>CFBundleVersion</key>
     <string>1</string>
+
     <key>NSLocalNetworkUsageDescription</key>
     <string>TV Remote needs access to your local network to discover and control your LG WebOS TV.</string>
+    <key>UIRequiresFullScreen</key>
+    <true/>
     <key>UILaunchScreen</key>
     <dict/>
     <key>UISupportedInterfaceOrientations</key>
@@ -19,4 +28,5 @@
         <string>UIInterfaceOrientationPortrait</string>
     </array>
 </dict>
+
 </plist>
