--- a/project.yml
+++ b/project.yml
@@ -11,6 +11,7 @@ targets:
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: com.tvremote.TVRemoteApp
       INFOPLIST_FILE: Info.plist
+      ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
       INFOPLIST_KEY_UIApplicationSceneManifest_Generation: YES
       INFOPLIST_KEY_UIApplicationSupportsIndirectInputEvents: YES
       INFOPLIST_KEY_UILaunchScreen_Generation: YES
